manifests/oauth-proxy/runtime-only/patch-route-oauth-proxy.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devops-control-plane
  namespace: devops-control-plane
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
